--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
+  "type": "module",
   "dependencies": {
     "chalk": "^5.2.0",
-    "type":"module",
     "express": "4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
+  },
+  "scripts": {
+    "start": "nodemon ./src/todo-api.js"
   }
-  
-}
+  }
